# testing-with-glium

./: Cargo.toml  README.md
assets/objects/kakyoin/: Kakyoin.mtl
src/: camera.rs  common.rs  cube.rs  main.rs
src/containers/: container.rs  kakyoin_container.rs  mod.rs  renderable_3d_object_container.rs  simple_containers.rs
src/objects/: kakyoin.rs  mod.rs  object.rs  renderable_3d_object.rs  simple_objects.rs
src/shaders/: common.rs  cubemap.rs  kakyoin_shader.rs  main_framebuffer_shader.rs  mod.rs  programs.rs  renderable_3d_object_shader.rs  shader.rs  simple_objects.rs  simple_shaders.rs
