[package]
name = "glium_testing"
version = "0.1.0"
authors = ["ZakStar17 <55145159+ZakStar17@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.1"
obj-rs = { version = "0.6", features = ["glium"] }
image = "*"
cgmath = "*"
num-traits = "0.2"
